# ZeroMBQ

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
doc/: Architecture.md  Requirements.md
doc/doxygen/: coverage.hpp  doxyfile  doxygen.md
include/: config.hpp  data.hpp  dataItem.hpp  dataPoint.hpp  forwarder.hpp  modbusMap.hpp  modbusSlave.hpp  slave.hpp  subscriber.hpp
scripts/: automerge.sh
src/: CMakeLists.txt  config.cpp  data.cpp  dataItem.cpp  dataPoint.cpp  forwarder.cpp  main.cpp  modbusMap.cpp  modbusSlave.cpp  slave.cpp  subscriber.cpp
test/: CMakeLists.txt
test/modbusReader/: CMakeLists.txt  modbusReader.cpp
test/publisher/: CMakeLists.txt  publisher.cpp
test/testApp/: CMakeLists.txt  main.cpp  test.json
test/unittests/: CMakeLists.txt  dataItemTest.cpp  dataPointTest.cpp  dataTest.cpp  exampleTest.cpp
